--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,11 @@
-$primary: #0678be;
+$primary: #009f90;
+
+$body-bg: #e1fff8;
+$body-color: #53413b;
+
+$code-color: #c18aa7;
+
+$warning: #e7ac0f;
 
 $font-size-base: 1.5rem;
 
