--- a/templates/base.twig
+++ b/templates/base.twig
@@ -20,7 +20,7 @@
 <body>
 
     <div class="container">
-        <header class="row">
+        <header class="row title">
         {% block header %}{% endblock %}
         </header>
         <div class="row justify-content-md-end gx-md-5">
