--- a/templates/main.twig
+++ b/templates/main.twig
@@ -1,7 +1,8 @@
 {% extends "base.twig" %}
 
 {% block header %}
-    <h1>Drupal Global Contribution Weekend 2022 - Vancouver</h1>
+    <h1>Drupal Global Contribution Weekend</h1>
+    <h2>Vancouver 2022</h2>
 {% endblock %}
 
 {% block aside %}
