--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,25 +1,28 @@
 body {
-  color: #333;
-  background-color: #fff;
   padding: 0 0.25rem 1rem;
 }
-
-@media (min-width: 40em) {
+@media (min-width: 576px) {
   body {
     padding: 0 2rem 2rem;
   }
 }
-@media (min-width: 80em) {
+@media (min-width: 768px) {
   body {
     padding: 0 5rem 2rem;
   }
 }
+
 .help {
   text-decoration: none;
 }
 
 header {
-  padding: 2rem 0;
+  padding: 1rem 0 2rem;
+}
+@media (min-width: 576px) {
+  header {
+    padding: 2rem 0;
+  }
 }
 
 .container {
@@ -28,45 +31,11 @@ header {
   margin-right: auto;
 }
 
-code {
-  background-color: rgba(0, 0, 0, 0.1);
-  border-color: rgba(0, 0, 0, 0.25);
-}
-
 code,
 kbd,
 pre,
 samp {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-code {
-  padding: 0.1rem 0.2rem;
-  color: #c7254e;
-  white-space: nowrap;
-  background-color: #f9f2f4;
-  border-radius: 0;
-}
-
-pre {
-  display: block;
-  padding: 10px;
-  margin: 0 0 1rem;
-  color: #333333;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f5f5f5;
-  border: 1px solid #cccccc;
-  border-radius: 0;
-}
-
-pre code {
-  padding: 0;
-  font-size: inherit;
-  color: inherit;
-  white-space: pre-wrap;
-  background-color: transparent;
-  border-radius: 0;
 }
 
 details {
@@ -81,9 +50,9 @@ details summary {
   background-repeat: no-repeat;
   background-position: right 0 top 50%;
   background-size: 1.7rem 1.7rem;
-  color: #33aaee;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cpath d='M53 29H35V11a3 3 0 00-6 0v18H11a3 3 0 000 6h18v18a3 3 0 006 0V35h18a3 3 0 000-6z' fill='%2333aaee'/%3E%3C/svg%3E");
-  border-bottom: 1px solid #33aaee;
+  color: #009f90;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cpath d='M53 29H35V11a3 3 0 00-6 0v18H11a3 3 0 000 6h18v18a3 3 0 006 0V35h18a3 3 0 000-6z' fill='%23009F90'/%3E%3C/svg%3E");
+  border-bottom: 1px solid #009f90;
   padding-right: 2rem;
 }
 @media (min-width: 1200px) {
@@ -94,7 +63,7 @@ details summary {
 
 details[open] summary {
   border-bottom-width: 3px;
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cpath d='M53 34H11a3 3 0 010-6h42a3 3 0 010 6z' fill='%2333aaee'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cpath d='M53 34H11a3 3 0 010-6h42a3 3 0 010 6z' fill='%23009F90'/%3E%3C/svg%3E");
 }
 
 summary {
@@ -131,57 +100,59 @@ h3 {
   font-weight: 700;
 }
 
+.title h1,
+.title h2 {
+  color: #8fdfd0;
+  margin: 0;
+}
+
 h1 {
-  color: #ccc;
-  font-size: calc(1.425rem + 2.1vw);
+  font-size: calc(1.625rem + 4.5vw);
   line-height: 1;
 }
 @media (min-width: 1200px) {
   h1 {
-    font-size: 3rem;
+    font-size: 5rem;
   }
 }
 
 h2 {
-  color: #4d4d4d;
+  color: #5e504c;
   font-weight: 700;
-  font-size: calc(1.325rem + 0.9vw);
+  font-size: calc(1.4rem + 1.8vw);
   line-height: 1.3em;
 }
 @media (min-width: 1200px) {
   h2 {
-    font-size: 2rem;
+    font-size: 2.75rem;
   }
 }
 
 h3 {
-  color: #666;
-  font-size: calc(1.285rem + 0.42vw);
+  font-size: calc(1.325rem + 0.9vw);
   font-weight: 700;
 }
 @media (min-width: 1200px) {
   h3 {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
 }
 
 *:not(div) + h2,
 *:not(div) + h3,
 *:not(div) + h4 {
-  margin-top: 2rem;
+  margin-top: 2.5rem;
 }
 
 h4 {
   font-weight: bold;
-  font-size: 1.4em;
+  font-size: calc(1.265rem + 0.18vw);
   line-height: 1.3em;
 }
-
-h6 {
-  font-weight: bold;
-  font-size: 18px;
-  margin: 0;
-  padding: 0 20px;
+@media (min-width: 1200px) {
+  h4 {
+    font-size: 1.4rem;
+  }
 }
 
 small {
