--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,42 +17,39 @@ h3 {
   font-weight: 700;
 }
 
+.title h1,
+.title h2 {
+  color: #8fdfd0;
+  margin: 0;
+}
+
 h1 {
-  color: #ccc;
-  @include font-size(3rem);
+  @include font-size(5rem);
   line-height: 1;
 }
 
 h2 {
-  color: #4d4d4d;
+  color: #5e504c;
   font-weight: 700;
-  @include font-size(2rem);
+  @include font-size(2.75rem);
   line-height: 1.3em;
 }
 
 h3 {
-  color: #666;
-  @include font-size(1.6rem);
+  @include font-size(2rem);
   font-weight: 700;
 }
 
 *:not(div) + h2,
 *:not(div) + h3,
 *:not(div) + h4 {
-  margin-top: 2rem;
+  margin-top: 2.5rem;
 }
 
 h4 {
   font-weight: bold;
-  font-size: 1.4em;
+  @include font-size(1.4rem);
   line-height: 1.3em;
-}
-
-h6 {
-  font-weight: bold;
-  font-size: 18px;
-  margin: 0;
-  padding: 0 20px;
 }
 
 small {
