--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,12 @@
 @import "variables";
 
 body {
-  color: #333;
-  background-color: #fff;
   padding: 0 0.25rem 1rem;
-}
-
-@media (min-width: 40em) {
-  body {
+  @include media-breakpoint-up(sm) {
     padding: 0 2rem 2rem;
   }
-}
-@media (min-width: 80em) {
-  body {
+
+  @include media-breakpoint-up(md) {
     padding: 0 5rem 2rem;
   }
 }
@@ -22,7 +16,10 @@ body {
 }
 
 header {
-  padding: 2rem 0;
+  padding: 1rem 0 2rem;
+  @include media-breakpoint-up(sm) {
+    padding: 2rem 0;
+  }
 }
 
 // Override bootstrap.
