zoom registration link instead

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -18,7 +18,7 @@
     </dl>
 
     <h2 id="location"><i class="fa-solid fa-location-pin"></i> Where</h2>
-    <a href="https://ubc.zoom.us/j/68502794323?pwd=b205TE5xVFJSYTNRZ1U3Y21hS0crdz09">Zoom</a>
+    <a href="https://ubc.zoom.us/meeting/register/u5wod-uvpz8pGNe30n4c-mi8Wq8EinZ2armJ">Zoom Registration</a>
     <h2 id="time"><i class="fa-solid fa-calendar"></i> When</h2>
     <p class="lead">Friday, January 28<sup>th</sup>, 2022<br/>9am &ndash; 5pm</p>
     <p class="lead">Saturday, January 29<sup>th</sup>, 2022<br/>9am &ndash; 5pm</p>
