Remove the help icons

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -52,23 +52,11 @@
         <div class="details__content">
             <ol>
                 <li>
-                    <strong>Install <a href="https://git-scm.com/downloads">git</a></strong>.
-                    <button type="button" class="btn btn-link help" data-bs-toggle="collapse" data-bs-target="#git" aria-expanded="false" aria-controls="git">
-                        <i class="fa-solid fa-circle-question fa-xl"></i>
-                    </button>
-                    <div id="git" class="collapse">
-                        <p><a href="https://git-scm.com/book">free online reference book</a></p>
-                    </div>
+                    <strong>Install <a href="https://git-scm.com/downloads">git</a></strong>
                 </li>
                 <li>
-                    <p><strong>Install <a href="https://ddev.readthedocs.io/en/stable/">DDEV</a>.</strong>
-                        <button type="button" class="btn btn-link help" data-bs-toggle="collapse" data-bs-target="#dev-stack" aria-expanded="false" aria-controls="dev-stack">
-                            <i class="fa-solid fa-circle-question fa-xl"></i>
-                        </button>
+                    <p><strong>Install <a href="https://ddev.readthedocs.io/en/stable/">DDEV</a></strong>
                     </p>
-                    <div id="dev-stack" class="collapse">
-                        <p>There are plenty more local development environments to choose from in the guide: <a href="https://www.drupal.org/docs/develop/local-server-setup">Local server setup</a>. </p>
-                    </div>
                 </li>
                 <li>
                     <p><strong>Create a local Drupal website:</strong>
@@ -83,7 +71,6 @@ ddev config</code></pre>
 
                     <p>From within the project directory</p>
                     <pre><code class="language-bash">ddev drush si standard</code></pre>
-
                 </li>
             </ol>
         </div>
@@ -99,8 +86,8 @@ ddev config</code></pre>
     <details>
         <summary>Existing Development Environment: DYI</summary>
         <div class="details__content"><p>You already have your setup, great! Carry on...</p>
-            <p>Have a peak at the <a href="https://www.drupal.org/docs/system-requirements">Drupal requirements</a> if
-                you need to tweak your setup:
+            <p>Have a peak at the <a href="https://www.drupal.org/docs/system-requirements">Drupal requirements</a> to tweak your setup.
+            <p>There are plenty more local development environments to choose from in the guide: <a href="https://www.drupal.org/docs/develop/local-server-setup">Local server setup</a>.
         </div>
     </details>
 
@@ -141,10 +128,8 @@ ddev config</code></pre>
 
     <h3>Additional tooling-up</h3>
     <ul>
-        <li><a href="https://www.drupal.org/tools">"Official" Drupal Contribution Tools</a></li>
-        <li><a href="https://www.sublimetext.com/download">SublimeText</a> (code editor) and
-            <a href="https://www.drupal.org/docs/develop/development-tools/configuring-sublime-text">configuration instructions</a></li>
-
+        <li><a href="https://www.drupal.org/tools">"Official" Drupal Contribution Tools</a> <small>(hint: it's DDEV with
+                extras)</small></li>
     </ul>
 
     <h3>Core</h3>
