link simplytest.me

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -93,7 +93,8 @@ ddev config</code></pre>
 
     <details>
         <summary>No Development Environment</summary>
-        <div class="details__content">There are plenty of ways to contribute without setting up a development environment, from simplytest.me,
+        <div class="details__content">There are plenty of ways to contribute without setting up a development environment, from
+            <a href="https://simplytest.me/">simplytest.me</a>,
             editing documentation and helping triage and move issues, to editing files directly in Gitlab on
             drupal.org.</div>
     </details>
