add more resources

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -119,6 +119,8 @@ ddev config</code></pre>
     <ul>
         <li><a href="https://www.drupal.org/community/contributor-guide">Contributor Guide</a></li>
         <li><a href="https://www.drupal.org/project/issues/search/drupal">Core Issue Queue</a></li>
+        <li><a href="https://www.drupal.org/docs/develop/git/using-git-to-contribute-to-drupal/creating-issue-forks-and-merge-requests">Creating issue forks and merge requests</a></li>
+        <li><a href="https://drupalize.me/guide/drupal-community-tools-and-core-mentoring">Drupalize.Me: Drupal Community Tools and Core Mentoring Videos</a></li>
     </ul>
 
     <h3>Standards</h3>
@@ -139,5 +141,13 @@ ddev config</code></pre>
         <li><a href="https://www.drupal.org/about/core/policies">Core Development Policies</a></li>
         <li><a href="https://www.drupal.org/core/roadmap">Core Roadmap</a></li>
     </ul>
+
+    <h3>Global Contribution Weekend Event Info</h3>
+    <ul>
+        <li><a href="https://groups.drupal.org/node/534740">Drupal Global Contribution Weekends</a></li>
+        <li><a href="https://groups.drupal.org/node/536597">Drupal Global Contribution Weekend January 28-30, 2022</a></li>
+        <li><a href="https://drupalcontributions.opensocial.site/event/contribution-weekend-2022">OpenSocial</a></li>
+    </ul>
+
 {% endblock %}
 
