--- a/templates/base.twig
+++ b/templates/base.twig
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="assets/prismjs/themes/prism-tomorrow.css" rel="stylesheet" />
@@ -35,13 +35,13 @@
     </div>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script src="js/popperjs/popper.js"></script>
+{#    <script src="js/popperjs/popper.js"></script>#}
     <script src="js/bootstrap/dom/event-handler.js"></script>
     <script src="js/bootstrap/dom/selector-engine.js"></script>
     <script src="js/bootstrap/dom/data.js"></script>
     <script src="js/bootstrap/dom/manipulator.js"></script>
     <script src="js/bootstrap/base-component.js"></script>
-    <script src="js/bootstrap/collapse.js"></script>
+{#    <script src="js/bootstrap/collapse.js"></script>#}
 {#    <script src="js/bootstrap/tooltip.js"></script>#}
 {#    <script src="js/bootstrap/popover.js"></script>#}
     <script src="assets/prismjs/prism.js"></script>
