Add ContributionWeekend2022 tagged issues link

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -119,6 +119,7 @@ ddev config</code></pre>
     <ul>
         <li><a href="https://www.drupal.org/community/contributor-guide">Contributor Guide</a></li>
         <li><a href="https://www.drupal.org/project/issues/search/drupal">Core Issue Queue</a></li>
+        <li><a href="https://www.drupal.org/project/issues/search?issue_tags=ContributionWeekend2022">'ContributionWeekend2022' tagged Issues</a></li>
         <li><a href="https://www.drupal.org/docs/develop/git/using-git-to-contribute-to-drupal/creating-issue-forks-and-merge-requests">Creating issue forks and merge requests</a></li>
         <li><a href="https://drupalize.me/guide/drupal-community-tools-and-core-mentoring">Drupalize.Me: Drupal Community Tools and Core Mentoring Videos</a></li>
     </ul>
