Update year and registration link

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -2,7 +2,7 @@
 
 {% block header %}
     <h1>Drupal Global Contribution Weekend</h1>
-    <h2>Vancouver 2022</h2>
+    <h2>Vancouver 2023</h2>
 {% endblock %}
 
 {% block aside %}
@@ -18,11 +18,10 @@
     </dl>
 
     <h2 id="location"><i class="fa-solid fa-location-pin"></i> Where</h2>
-    <a href="https://ubc.zoom.us/meeting/register/u5wod-uvpz8pGNe30n4c-mi8Wq8EinZ2armJ">Zoom Registration</a>
+    <a href="https://ubc.zoom.us/meeting/register/u5MtduuhrDwqEtM1Yx_ky47UgdkQ0GvKFu3i">Zoom Registration</a>
     <h2 id="time"><i class="fa-solid fa-calendar"></i> When</h2>
-    <p class="lead">Friday, January 28<sup>th</sup>, 2022<br/>9am &ndash; 5pm</p>
-    <p class="lead">Saturday, January 29<sup>th</sup>, 2022<br/>9am &ndash; 5pm</p>
-    <p class="lead">Sunday, January 30<sup>th</sup>, 2022<br/>Free-for-all</p>
+    <p class="lead">Friday, January 27<sup>th</sup>, 2023<br/>9am &ndash; 5pm</p>
+    <p class="lead">Saturday, January 28<sup>th</sup>, 2023<br/>9am &ndash; 5pm</p>
     <h2 id="thanks"><i class="fa-solid fa-hand-holding-heart"></i> Thanks</h2>
 <p>Thanks to UBC Computer Science department for hosting the Zoom.
     {#    <!-- <a href="https://thejibe.com/"><img src="https://thejibe.com/themes/quirky/ecommerce_agency.png" class="jibe-logo" /></a></p>
@@ -110,7 +109,7 @@ ddev config</code></pre>
     </p>
 
     <p>Depending on interest/audience, we will gladly show offer to do a demo/training session. And breakout rooms if need be, for example, to tackle
-        <a href="https://www.drupal.org/project/issues/search/feeds">feeds issues</a> or <a href="https://www.drupal.org/project/issues/search/basic">basic issues</a>.
+        <a href="https://www.drupal.org/project/issues/search/feeds">feeds module issues</a> or <a href="https://www.drupal.org/project/issues/search/basic">basic theme issues</a>.
     </p>
 
     <h2 id="references"><i class="fa-solid fa-book"></i> References</h2>
@@ -119,7 +118,7 @@ ddev config</code></pre>
     <ul>
         <li><a href="https://www.drupal.org/community/contributor-guide">Contributor Guide</a></li>
         <li><a href="https://www.drupal.org/project/issues/search/drupal">Core Issue Queue</a></li>
-        <li><a href="https://www.drupal.org/project/issues/search?issue_tags=ContributionWeekend2022">'ContributionWeekend2022' tagged Issues</a></li>
+        <li><a href="https://www.drupal.org/project/issues/search?issue_tags=ContributionWeekend2023">'ContributionWeekend2023' tagged Issues</a></li>
         <li><a href="https://www.drupal.org/docs/develop/git/using-git-to-contribute-to-drupal/creating-issue-forks-and-merge-requests">Creating issue forks and merge requests</a></li>
         <li><a href="https://drupalize.me/guide/drupal-community-tools-and-core-mentoring">Drupalize.Me: Drupal Community Tools and Core Mentoring Videos</a></li>
     </ul>
@@ -146,8 +145,8 @@ ddev config</code></pre>
     <h3>Global Contribution Weekend Event Info</h3>
     <ul>
         <li><a href="https://groups.drupal.org/node/534740">Drupal Global Contribution Weekends</a></li>
-        <li><a href="https://groups.drupal.org/node/536597">Drupal Global Contribution Weekend January 28-30, 2022</a></li>
-        <li><a href="https://drupalcontributions.opensocial.site/event/contribution-weekend-2022">OpenSocial</a></li>
+        <li><a href="https://groups.drupal.org/node/536597">Drupal Global Contribution Weekend January 27–30, 2023</a></li>
+        <li><a href="https://drupalcontributions.opensocial.site/event/contribution-weekend-2023">OpenSocial</a></li>
     </ul>
 
 {% endblock %}
