Update content for the day

--- a/templates/main.twig
+++ b/templates/main.twig
@@ -23,15 +23,8 @@
     <p class="lead">Friday, January 27<sup>th</sup>, 2023<br/>9am &ndash; 5pm</p>
     <p class="lead">Saturday, January 28<sup>th</sup>, 2023<br/>9am &ndash; 5pm</p>
     <h2 id="thanks"><i class="fa-solid fa-hand-holding-heart"></i> Thanks</h2>
-<p>Thanks to UBC Computer Science department for hosting the Zoom.
-    {#    <!-- <a href="https://thejibe.com/"><img src="https://thejibe.com/themes/quirky/ecommerce_agency.png" class="jibe-logo" /></a></p>
-  <address>Suite 202 - 311 Water St, Vancouver, BC<br/>
-  Vancouver, Canada V6B 1B8<br/>
-  Street maps of The Jibe's office location
-  </address>
-  <a href="https://maps.google.com/maps?q=311+Water+St+%23202,+Vancouver,+BC,+Canada&hl=en&sll=37.0625,-95.677068&sspn=60.288153,105.732422&t=h&hnear=311+Water+St+%23202,+Vancouver,+British+Columbia+V6B+4Y2,+Canada&z=16" class="map-link">
-  <img src="https://a.tiles.mapbox.com/v3/stevekrueger.map-3dhy0n3s/-123.10876999999998,49.28456,17/320x320.png" /> -->
-   </a>#}
+    <p>Thanks to <a href="https://www.cs.ubc.ca">UBC Computer Science</a> department for hosting the Zoom and providing time for its web developers to contribute.
+
     {% endblock %}
 {% block content %}
     <h2 id="setup"><i class="fa-solid fa-tools"></i> Getting Set-up</h2>
@@ -41,9 +34,9 @@
     <h3>1. Create an account on <a href="https://drupal.org/user/register">Drupal.org</a></h3>
     <h3>2. Join the conversation Drupal's <a href="https://www.drupal.org/slack">Slack</a> groups</h3>
 
-    <p>Add <a href="https://www.drupal.org/slack">Drupal Slack</a> and <a href="https://vandug.herokuapp.com/">Van DUG</a> groups.
+    <p>Add <a href="https://www.drupal.org/slack">Drupal Slack</a> and <a href="https://join.slack.com/t/vandug/shared_invite/zt-1npxicv9i-jZEl2u7ajpV4Dh7pbNdW6g">Van DUG</a> groups.
 
-    <p>Join the <code>#contribute</code> slack channels.</p>
+    <p>Join the <code>#contribute</code> Slack channels.</p>
 
     <h3>3. <i class="fa-solid fa-hiking"></i> Choose your own adventure:</h3>
     <details>
@@ -59,10 +52,10 @@
                 </li>
                 <li>
                     <p><strong>Create a local Drupal website:</strong>
-                        <strong>Clone <a href="https://www.drupal.org/project/drupal/git-instructions">Drupal 9</a> with git:</strong>
+                        <strong>Clone <a href="https://www.drupal.org/project/drupal/git-instructions">Drupal 10</a> with git:</strong>
                     </p>
-                    <pre><code class="language-bash">mkdir ~/Sites/d9
-cd ~/Sites/d9
+                    <pre><code class="language-bash">mkdir ~/Sites/d10
+cd ~/Sites/d10
 git clone https://git.drupalcode.org/project/drupal.git web
 ddev config</code></pre>
                 </li>
@@ -99,17 +92,13 @@ ddev config</code></pre>
     </details>
 
     <h2 id="agenda"><i class="fa-solid fa-cloud-sun"></i> During the day</h2>
-
-        <p class="lead">Work with a group on porting and testing a contributed module to Drupal 9 or 10</p>
-
-    <em class="text-muted">or</em>
-
-    <p class="lead">
-      Take a look at the <a href="https://www.drupal.org/contributor-tasks">Contributor tasks</a>. <strong>Work with another contributor to find a task</strong>.
-    </p>
-
+    <p class="lead">Mission: Contributions to help stablize Drupal 9 or 10 core and contributed Modules and Themes</p>
     <p>Depending on interest/audience, we will gladly show offer to do a demo/training session. And breakout rooms if need be, for example, to tackle
-        <a href="https://www.drupal.org/project/issues/search/feeds">feeds module issues</a> or <a href="https://www.drupal.org/project/issues/search/basic">basic theme issues</a>.
+        <a href="https://www.drupal.org/project/issues/search/feeds">Feeds module issues</a> or <a href="https://www.drupal.org/project/issues/search/basic">Basic theme issues</a>.
+    </p>
+    <p><em class="text-muted">or</em></p>
+    <p>
+        Take a look at the <a href="https://www.drupal.org/contributor-tasks">Contributor tasks</a>. Work with another contributor to find a task.
     </p>
 
     <h2 id="references"><i class="fa-solid fa-book"></i> References</h2>
@@ -118,7 +107,7 @@ ddev config</code></pre>
     <ul>
         <li><a href="https://www.drupal.org/community/contributor-guide">Contributor Guide</a></li>
         <li><a href="https://www.drupal.org/project/issues/search/drupal">Core Issue Queue</a></li>
-        <li><a href="https://www.drupal.org/project/issues/search?issue_tags=ContributionWeekend2023">'ContributionWeekend2023' tagged Issues</a></li>
+        <li><a href="https://www.drupal.org/project/issues/search?issue_tags=GlobalContributionWeekend2023">'GlobalContributionWeekend2023' tagged Issues</a></li>
         <li><a href="https://www.drupal.org/docs/develop/git/using-git-to-contribute-to-drupal/creating-issue-forks-and-merge-requests">Creating issue forks and merge requests</a></li>
         <li><a href="https://drupalize.me/guide/drupal-community-tools-and-core-mentoring">Drupalize.Me: Drupal Community Tools and Core Mentoring Videos</a></li>
     </ul>
@@ -131,8 +120,7 @@ ddev config</code></pre>
 
     <h3>Additional tooling-up</h3>
     <ul>
-        <li><a href="https://www.drupal.org/tools">"Official" Drupal Contribution Tools</a> <small>(hint: it's DDEV with
-                extras)</small></li>
+        <li><a href="https://www.drupal.org/tools">"Official" Drupal Contribution Tools</a> <small>(hint: it's DDEV with extras)</small></li>
     </ul>
 
     <h3>Core</h3>
@@ -145,8 +133,7 @@ ddev config</code></pre>
     <h3>Global Contribution Weekend Event Info</h3>
     <ul>
         <li><a href="https://groups.drupal.org/node/534740">Drupal Global Contribution Weekends</a></li>
-        <li><a href="https://groups.drupal.org/node/536597">Drupal Global Contribution Weekend January 27–30, 2023</a></li>
-        <li><a href="https://drupalcontributions.opensocial.site/event/contribution-weekend-2023">OpenSocial</a></li>
+        <li><a href="https://groups.drupal.org/node/536774">Drupal Global Contribution Weekend January 28-29, 2023</a></li>
     </ul>
 
 {% endblock %}
