--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,7 +76,7 @@ details > .details__content {
 }
 
 body {
-  font-family: "PT Serif", Georgia, serif;
+  font-family: "Nunito", "Helvetica Neue", Arial, sans-serif;
   font-size: calc(1.275rem + 0.3vw);
 }
 @media (min-width: 1200px) {
@@ -86,21 +86,18 @@ body {
 }
 
 h1,
-h2 {
-  text-transform: uppercase;
-}
-
-h1,
 h2,
 h3 {
-  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
-  font-weight: 700;
+  font-family: "Nunito", "Helvetica Neue", Arial, sans-serif;
+  font-weight: 1000;
 }
 
 .title h1,
 .title h2 {
   color: #8fdfd0;
   margin: 0;
+  font-weight: 1000;
+  text-transform: uppercase;
 }
 
 h1 {
