--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,26 +1,23 @@
 @import "../variables";
 
 body {
-  font-family: 'PT Serif', Georgia, serif;
+  font-family: "Nunito", "Helvetica Neue", Arial, sans-serif;
   @include font-size(1.5rem);
-}
-
-h1,
-h2 {
-  text-transform: uppercase;
 }
 
 h1,
 h2,
 h3 {
-  font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
-  font-weight: 700;
+  font-family: "Nunito", "Helvetica Neue", Arial, sans-serif;
+  font-weight: 1000;
 }
 
 .title h1,
 .title h2 {
   color: #8fdfd0;
   margin: 0;
+  font-weight: 1000;
+  text-transform: uppercase;
 }
 
 h1 {
